--- a/Slak/20.md
+++ b/Slak/20.md
@@ -1,13 +1,17 @@
 
-# CHAPTER XX 
+# Chapter XX 
 
-## OTHER CHRISTIAN DISCUSSION OF MAGIC BEFORE AUGUSTINE 
+## Other christian discussion of magic before Augustine 
 
-### Plan of this chapter.
+### Plan of this chapter
 
 In this chapter we shall supplement the picture of the Christian attitude towards magic supplied us in preceding chapters by some accounts of magic in other Christian writers of the period before Augustine. After giving the opinions of a few Latin fathers, Minucius Felix, Tertullian, and Lactantius, we shall consider the exposure of magic devices in Hippolytus' _Refutation of All Heresies_, then compare the utterances of other fathers concerning the witch of Endor with those of Origen, and finally discuss the treatment of the Magi and the star of Bethlehem in both the genuine and the spurious homily of Chrysostom on that theme, adding some account of the medieval development of the legend of the three Magi, although leaving until later the statements of medieval theologians and astronomers concerning the star of the Magi. This makes a rather omnibus chapter, but its component parts are too brief to separate as distinct chapters and they all supplement the preceding chapter on Origen and Celsus. 
 
-## Tertullian.
+## Tertullian
+
+Quintus Septimius Florens Tertullianus; c.155 – c.240 AD) was a prolific early Christian author from Carthage in the Roman province of Africa. Of Berber origin, he was the first Christian author to produce an extensive corpus of Latin Christian literature. He also was an early Christian apologist and a polemicist against heresy, including contemporary Christian Gnosticism. Tertullian has been called "the father of Latin Christianity" and "the founder of Western theology." [^463:0]
+
+[^463:0]: [Tertullian](https://en.wikipedia.org/wiki/Tertullian)
 
 ### Tertullian on magic.
 
@@ -63,7 +67,7 @@ Tertullian rejoices that the mathematici or astrologers are forbidden to enter R
 
  [^465:1]: _Apology_, cap. 35. 
 
-### Resemblance to Minucius Felix.
+### Resemblance to Minucius Felix
 
 Tertullian's account of magic is perhaps borrowed from the dialogue entitled _Octavius_ by M.Minucius Felix,  [^465:2] which  is generally regarded as the oldest extant work of Christian  Latin literature and was probably written in the reign of Marcus Aurelius. 
 
@@ -79,7 +83,7 @@ and a third passage of the same sort appears in Cyprian of Carthage in the third
 
  [^465:4]: Cyprian, _Liber de idolorum vanitate_, caps. 6-7. 
 
-## Lactantius.
+## Lactantius
 
 A century after Tertullian Lactantius of Gaul treats of magic and demons in about the same way in his _Divine Institntes_,  [^465:5] written at the opening of the fourth century. He denies that Christ was a magician and declares that His miracles differed from those attributed to Apuleius and Apollonius of Tyana in that they were announced beforehand by the prophets. 
 
@@ -87,27 +91,31 @@ A century after Tertullian Lactantius of Gaul treats of magic and demons in abou
 
 > "He worked marvels," Lactantius says to his opponents, "and we should have thought Him a magician, as you think now and as the Jews thought at the time, had not all the prophets with one accord predicted that Christ would do these very things."  [^465:6]
 
- [^465:6]: V, 3, 
+ [^465:6]: V,3. 
 
 Lactantius believes that the offspring of the fallen angels and "the daughters of men" were a different variety of demon from their fathers and more terrestrial. Be that as it may, he affirms that the entire art and power of the magicians consist in invocations of demons who 
 
 "deceive human vision by blinding illusions so that men do not see what does exist and think that they see what does not exist,"  [^466:1]
 
- [^466:1]: II, 15.
+ [^466:1]: II,15.
 
 the very expression that we have just heard from Minucius Felix. More specifically Lactantius regards necromancy, oracles, liver-divination, augury, and astrology as all invented by the demons.  [^466:2]
 
- [^466:2]: II, 17.
+ [^466:2]: II,17.
 
 Like Origen he emphasizes the power of the sign of the cross and the name of Jesus against the evil spirits,  [^466:3]
 
- [^466:3]: IV, 27.
+ [^466:3]: IV,27.
 
 and he implies the power of the names of spirits when he states that, although demons may masquerade under other forms and names in pagan temples and worships, in magic and sorcery they are always summoned by their true names, those celestial ones which are read in sacred literature. [^466:4]
 
- [^466:4]: II, 17.
+ [^466:4]: II,17.
 
 ## Hippolytus 
+
+Hippolytus (c. 170–235 AD) was one of the most important second-third century Christian theologians, whose provenance, identity and corpus remain elusive to scholars and historians. Suggested communities include Palestine, Egypt, Anatolia, Rome and regions of the mideast. The best historians of literature in the ancient church, including Eusebius of Caesarea and Jerome, openly confess they cannot name where Hippolytus the biblical commentator and theologian served in leadership. They had read his works but did not possess evidence of his community. [^433:41]
+
+[^433:41]: [Hippolytus of Rome](https://en.wikipedia.org/wiki/Hippolytus_of_Rome)
 
 ### Hippolytus on magic and astrology.
 
@@ -152,7 +160,10 @@ Moreover, we see that magic fraud involves chemical experiment and considerable 
 The question then arises whether Hippolytus himself discovered these tricks of the magicians or whether he is sources, simply copying his explanations of them from some previous work. An examination of the earlier chapters of his fourth book is sufficient to solve the question. His arguments against the practice of the Chaldean astrologers of predicting man's life from his horoscope at the time of his birth are drawn from the pages of the skeptical philosopher, Sextus Empiricus, whom he follows so closely that his editors are able to rectify his text by reference to the parallel passage in Sextus.  
 We are therefore probably safe in assuming, especially in view of the resemblances to the _Alexander_ of Lucian which have already been noted, that Hippolytus' attack on magic is also largely indebted to some classical work, possibly to that very treatise against magic by Celsus to which both Origen and Lucian refer, or perhaps to some account of apparatus with which to work marvels like Hero's Pneumatics. 
 
-## Justin Martyr.
+## Justin Martyr
+
+[Saint Justin Martyr](https://www.britannica.com/biography/Saint-Justin-Martyr), (born c. 100, Flavia Neapolis, Palestine now Nāblus died c.165, Rome, Italy; feast day June 1), one of the most important of the Greek philosopher-Apologists in the early Christian church. His writings represent the first positive encounter of Christian revelation with Greek philosophy and laid the basis for a theology of history.    
+A pagan reared in a Jewish environment, Justin studied Stoic, Platonic, and other pagan philosophies and then became a Christian in 132, possibly at Ephesus, near modern Selçuk, Turkey. Soon after 135 he began wandering from place to place proclaiming his newfound Christian philosophy in the hope of converting educated pagans to it. He spent a considerable time in Rome. Some years later, after debating with the cynic Crescens, Justin was denounced to the Roman prefect as subversive and condemned to death. Authentic records of his martyrdom survive.
 
 ### Justin Martyr and others on the witch of Endor.
  
@@ -167,6 +178,8 @@ Huet, who edited the writings of Origen, lists other Christian authors  [^469:2]
  [^469:2]: Leo Allatius "in syntagmate" _De engastrimytho_, cap, 7 ; Sulpicius Severus, _Historia sacra_, liber I; Anastasius Antiochenus, Οδηγός - Odigós - Guide, quaest., 112; "et eorum quos laudat Bellarminus liber IV _de Cristo_, cap. 11." 
 
 ## Gregory
+
+[Gregory of Nyssa](https://www.iep.utm.edu/gregoryn/) c. 335—c. 395 C.E. spent his life in Cappadocia, a region in central Asia Minor. He was the most philosophically adept of the three so-called Cappadocians, who included brother Basil the Great and friend Gregory of Nazianzus. Together, the Cappadocians are credited with defining Christian orthodoxy in the Eastern Roman Empire, as Augustine (354—430 C.E.) was to do in the West. Gregory was a highly original thinker, drawing inspiration from the pagan Greek philosophical schools, as well as from the Jewish and Eastern Christian traditions, and formulating an original synthesis that was to influence later Byzantine, and possibly even modern European, thought. A central idea in Gregory's writing is the distinction between the transcendent nature and immanent energies of God, and much of his thought is a working out of the implications of that idea in other areas, notably, the world, humanity, history, knowledge, and virtue.
 
 ### Gregory of Nyssa and Eustathius concerning the ventriloquist
  
@@ -183,13 +196,13 @@ Eustathius contends that the witch did not invoke Samuel but only made Saul thin
 
  [^470:1]: The King James version, First Samuel, XXVIII, 19, reads, "and to morrow shalt thou and thy sons be with me," instead of "thou and Jonathan." 
 
-### Gregory of Nyssa Against Fate.
+### Gregory of Nyssa Against Fate
 
 Gregory of Nyssa also composed a treatise, entitled Against Fate,  [^470:2] in the form of a disputation between a pagan philosopher and himself at Constantinople in 382 A. D. His opponent holds that the life of man is determined by the constellations at his nativity, upon whose decree even conversion to Christianity would thus be made dependent. Gregory assumes the position of one hitherto ignorant of the principles of the art of astrology, of which the philosopher has to inform him, but on general grounds it seems very unlikely that he really was as ignorant as this of such a widespread superstition. Furthermore, he is sufficiently read in the subject to incorporate some of Bardesanes' arguments, of whose treatise both Gregory's title and dialogue form are reminiscent. Some of Gregory's reasoning, however, might well be that of a tyro and is scarcely worth elaborating here. 
 
  [^470:2]: Migne, PG, XII, 143-74.
 
-### Astrology and the birth of Christ.
+### Astrology and the birth of Christ
 
 When the writer of the Gospel according to Matthew included the story of the wise men from the east who had seen the star, there can be little or no doubt that he inserted it and that it had been formulated in the first place, not merely in order to satisfy the ordinary, unlearned reader with portents connected with the birth of Jesus, but to secure the appearance of support for the kingship of Jesus from that art or science of astrology which so many persons then held in high esteem. To an age whose sublimest science was star-gazing it would seem fitting and almost inevitable that God should have announced the coming of the Prince of Peace in this manner, and the account in the Gospel of Matthew is in a sense an attempt to present the birth of Christ in a way to comply with the most searching tests of contemporary science. But the early Christians were relatively rude and unlettered, and this effort to construct a royal horoscope for Jesus is a crude and faulty one from the astrological standpoint.  
 For this, however, the author of the Gospel and not the art of astrology is obviously responsible. As a result, however, of the Gnostic reaction against astrological fatalism or of an orthodox Christian opposition to both Gnostics and astrologers, most of the early fathers of the church denied that this passage implied any recognition of the truth of astrology and attempted to explain away its obvious meaning. In doing this they often made the crude and imperfect astrology of the Gospel a criterion for criticizing the art of astrology itself.
@@ -208,7 +221,7 @@ The famous St. John Chrysostom was born at Antioch about 347 A. D. and there stu
 
  [^472:1]: Migne. PG, LX, 274-5, in the 38th homily on the Book of Acts. 
  
-### Sixth Homily on Matthew.
+### Sixth Homily on Matthew
 
 In his sixth homily upon Matthew Chrysostom recognizes the difficulties presented by the Scriptural account of the Magi and the star, and approaches the task of expounding it with prayers to God for aid. Some, he informs us, take the passage as an admission of the truth of astrology. It is this opinion which he is concerned to refute. He argues that it is not the function of astronomy to learn from the stars who are being born but merely to predict from the hour of birth what is going to happen, which seems a quite fallacious distinction upon his part. He also criticizes the Magi for calling Jesus the king of the Jews, when as Christ told Pilate His kingdom was not of this world.  
 He further criticizes them for coming to Christ's birthplace when they might have known that it would cause difficulties with Herod, the existing king, and for coming, making trouble, and then immediately going back home again. But these shortcomings would seem to be those of the Scriptural narrative rather than of the art of astrology, although of course Chrysostom is trying to make the point that the Magi had not foreseen what would happen to themselves. He further argues that the star of Bethlehem was not like other stars nor even a star at all,  [^472:2] as was proved by its peculiar itinerary, its shining by day, its rare intelligence in hiding itself at the right time, and its miraculous ability in standing over the head of the child.  
@@ -216,7 +229,7 @@ Chrysostom therefore concludes that some invisible virtue put on the form of a s
 
  [^472:2]: On the other hand, D.Friedrich M&uuml;nter, _Der Stern der Weisen: Untersuchungen &uuml;iber das Geburtsjahr Christi_, Kopenhagen, 1827, adopted the astrological theory that the star of Bethlehem was really a major conjunction of Saturn and Jupiter in Pisces, which Jewish tradition, too, seems to have regarded as the sign of the Messiah, and that therefore Jesus was born in 6 B. C. This view had already been advanced by Kepler, but recent writers seem to prefer a conjunction in Aries: see H. G. Voigt, Die Geschichte Jesu und die Astrologie, Leipzig, 1911; Kritzinger, _Der Stern der Weisen_, G&uuml;tersloh, 1911; von Oefele, _Die Angaben der Berliner Planetentafel P8279 verglichen mit der Geb&uuml;rtsgeschichte Christi im Berichte des Matthdus_, Berlin, 1903, in _Mitteil. d. Vorderasiatischen Gesellschaft_. 
 
-### The spurious homily.
+### The spurious homily
 
 The other homily ascribed to Chrysostom repeats some of the points made in the genuine homily, but adds others. The preacher has read somewhere, perhaps in Origen where we have already met the suggestion, that the Magi had learned that the star would appear from the books of the diviner Balaam, 
 
@@ -229,7 +242,7 @@ This tale is indeed pleasing enough, and it saves the Magi from all imputation o
 
  [^475:1]: Mâle, _Religious Art in France_, 1913, p.208, was not able to trace the legend that the star of the Magi appeared with the face of a child beyond _The Golden Legend_ compiled by James of Voragine in the thirteenth century. We shall, however, find it mentioned in the twelfth century by Abelard, who derived it from this spurious homily of Chrysostom. 
 
-### Number, names, and home of the Magi.
+### Number, names, and home of the Magi
 
 We have already noted that Origen seems to have been the first of the fathers to state the number of the Magi as three, whereas the homily just considered imphes that there were twelve of them. Their representation in art as three in number did not become general until the fourth century,  [^476:1]
 
@@ -263,7 +276,7 @@ Persia or Chaldea according to Chrysostom and Diodorus of Tarsus;
 
  [^476:7]: _Comm. in Platonis Timaeum_, II, vi, 125; quoted by M&uuml;nter (1827), pp. 27-8. 
 
-### Liturgical drama of the Magi; Three Kings of Cologne.
+### Liturgical drama of the Magi; Three Kings of Cologne
 
 In the middle ages the Magi appeared in liturgical drama as well as in art. An early instance is a tenth century lectionary from Compiegne, now preserved at Paris,  [^476:8] where after homilies by various fathers there is added in a hand only slightly later the liturgical drama of the adoration of the Magi. 
 
@@ -291,11 +304,11 @@ Finally we may note the contents of the homily on the Magi which immediately pre
 
  [^478:1]: BN 16819, 10th century, fols. 46r-49r. 
 
-### Priscillianists answered.
+### Priscillianists answered
 
 Since the heretics known as Priscillianists have adduced the star at Christ's birth to prove that every man is born under the fates of the stars, the preacher endeavors to answer them. He holds that since the star came to where Jesus lay He controlled it rather than vice versa. Then follow the usual arguments against genethlialogy that many men born under the sign Aquarius are not fishermen, that sons of serfs are born at the same time as princes, and the case of Jacob and Esau. The star was merely a sign to the Magi and by its twinkling illuminated their minds to seek the new-born babe. It seems scarcely consistent that a star which the preacher has called irrational should illuminate minds. 
 
-### Number and race of the Magi again. 
+### Number and race of the Magi again 
 
 The homily goes on to say that opinions differ as to who the Magi were and whence they came. Owing to the prophecy that the kings of Tarsus and the isles offer presents, the kings of the Arabs and Sheba bring gifts, some regard Tarsus, Arabia, and Sheba as the homes of the Magi. Others call them Persians or Chaldeans, since Chaldeans are skilled in astronomy. Others say that they were descendants of Balaam. At any rate they were the first Gentiles to seek Christ and they are well said to have been three, symbolizing faith in the Trinity, the three virtues, faith, hope and charity, the three safeguards against evil thoughts, words and works, and the three Gentile contributions to the Faith of physics, ethics, and logic, or natural, moral, and rational philosophy. The preacher then indulges in further allegorical interpretation anent Herod and what was typified by the gifts of the Magi.  [^479:1]
 
